[package]
name = "target-macos"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
[profile.dev]
opt-level = 3
[profile.test]
opt-level = 3
[profile.bench]
opt-level = 0

[dependencies]
emulator = { path = "../emulator" }

# generic Result<> with any error
anyhow = "1.0.95"

# Objective-C / MacOS bindings
objc2 = "0.6.1"
objc2-foundation = "0.3.1"
objc2-core-foundation = "0.3.1"
objc2-core-graphics = "0.3.1"
objc2-app-kit = "0.3.1"
block2 = "0.6.1"

# hashmap! macro
maplit2 = "1.0.5"