[package]
name = "target-windows"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
[profile.dev]
opt-level = 3
[profile.test]
opt-level = 3
[profile.bench]
opt-level = 0

[dependencies]
emulator = { path = "../emulator" }

# generic Result<> with any error
anyhow = "1.0.95"

# WinAPI bindings
windows = { version = "0.61.3", features = [
    "Win32_Foundation", "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]}

# hashmap! macro
maplit2 = "1.0.5"